src/test/ui/macros/macro-in-expression-context.rs
// check-pass

macro_rules! foo {
    () => {
        assert_eq!("A", "A");
        assert_eq!("B", "B");
    }
}

fn main() {
    foo!()
}
